fixed scrollbar in navbar

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,6 @@
+* {
+	overflow: hidden;
+}
 body {
 	margin:0;
 	background-color: #333;
